data/derived/sp14/progs/unify/prog1839.ml.out
Characters 67-68:
  let f' b' = ( f, f b = b ) in f b , b );;
                                      ^
Error: This expression has type 'a -> 'a * bool
       but an expression was expected of type 'a
       The type variable 'a occurs inside 'a -> 'a * bool
